css/projects.css
        .btn-secondary,
        .btn-secondary:hover,
        .btn-secondary:focus {
        color: #333;
        text-shadow: none;
        background-color: black;
        border: 1px solid #fff;
        }

        html,
        body {
        height: 100%;
        background-color: white;
        font-family: 'Montserrat';
        }

        a,
        a:focus,
        a:hover {
        color: black;
        }

      .masthead-brand {
          position: fixed;
          height: 50px;
          margin-top: -10px;
          z-index: 150;
      }

      .nav-masthead {
        position: fixed;
        margin-top: 40px;
        z-index: 150;

      }

      #nav-block {
        background-color: white;
        z-index: 10;
        position: fixed;
        height: 120px;
        width: 150%;
        margin-left: -130px;
        margin-top: -20px;
        border-bottom: 1px solid gray;

      }


      #filter-buttons{
        padding-top: 80px;
      }

      * {
        box-sizing: border-box;
      }


      .row:after {
        content: "";
        display: table;
        clear: both;
      }

      .row,
      .row > .column {
        padding: 3px;
      }

      .content {
        padding: 5px;
      }

      .btn {
        border: none;
        outline: none;
        background-color: none;
        color: black;
        cursor: pointer;
        font-size: 18px;
      }

      .btn:hover {
        color: black;
        background-color: transparent;
        font-weight: 700;
      }

      .btn.active {
        font-weight: 900;
      }

      .item-box {
        position: relative;
        overflow: hidden;
        display: block;
        }

      .item-box a {
        display: inline-block;
        }

      .item-box .item-mask {
        background: none repeat scroll 0 0 rgba(255, 255, 255, 0.9);
        position: absolute;
        transition: all 0.5s ease-in-out 0s;
        -moz-transition: all 0.5s ease-in-out 0s;
        -webkit-transition: all 0.5s ease-in-out 0s;
        -o-transition: all 0.5s ease-in-out 0s;
        top: 10px;
        left: 10px;
        bottom: 10px;
        right: 10px;
        opacity: 0.33;
        visibility: hidden;
        overflow: hidden;
        text-align: center;
        }

      .item-box .item-mask .item-caption {
        position: absolute;
        width: 100%;
        bottom: 10px;
        opacity: 0;
        }

      .item-box:hover .item-mask {
        opacity: 1;
        visibility: visible;
        cursor: pointer !important;
        }

      .item-box:hover .item-caption {
        opacity: 1;
        }

      .item-box:hover .item-container {
        width: 100%;
        }
        
      @media (min-width: 992px) {

        body {
        display: -ms-flexbox;
        display: -webkit-box;
        display: flex;
        -ms-flex-pack: center;
        -webkit-box-pack: center;
        color: black;

        }

        #filter-buttons {
          margin-left: 50px;
          padding-top: 40px;
        }

        #gallery {
        margin-left: 0;
        }

      .cover-container {
        max-width: 95%;
        }

        .masthead {
        margin-bottom: 2rem;
        }

        .masthead-brand {
          float: left;
          height: 50px;
          margin-top: -10px;
          position: relative;        
        }

        .nav-masthead {
          float: right;
          position: relative;
          margin-top: 0px;
        }

        .nav-masthead .nav-link {
        padding: .25rem 0;
        color: black;
        background-color: transparent;
        border-bottom: 2px solid transparent;
        }

        .nav-masthead .nav-link:hover,
        .nav-masthead .nav-link:focus {
        border-bottom-color: black;
        }

        .nav-masthead .nav-link + .nav-link {
        margin-left: 1rem;
        font-family: 'Montserrat';
        }

        .nav-masthead .active {
        color: black;
        border-bottom-color: black;
        }

        .mastfoot {
        color: rgba(255, 255, 255, .5);
        }

        .row,
        .row > .column {
          padding: 8px;
        }
  
        .column {
          float: left;
          width: 33.33%;
          display: none;
        }
  
        .content {
          padding: 5px;
        }
  
        .show {
          display: block;
        }
      
  
        hr {
          margin-top: 20px;
          margin-bottom: 20px;
          border: 0;
          border-top: 1px solid black;
          width: 100%;
        }
      }

      @media only screen and (min-width: 992px) {
        .mobile-only {
            display:none !important;
        }
    } 

    @media only screen and (max-width: 1026px) {
        .desktop-only {
            display:none !important;
        }
    } 

